--- a/src/main/resources/com/mycompany/architask/login.fxml
+++ b/src/main/resources/com/mycompany/architask/login.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -50,10 +51,11 @@
             </Text>
             <PasswordField fx:id="lPassword" layoutX="26.0" layoutY="186.0" prefHeight="25.0" prefWidth="250.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: #0a2342; -fx-border-width: 0px 0px 1.5px 0px;" />
             <Button fx:id="btnLogin" layoutX="84.0" layoutY="254.0" mnemonicParsing="false" onAction="#login" prefHeight="25.0" prefWidth="135.0" style="-fx-background-color: #0a2342;" text="Connect" textFill="#eff9f0" />
-            <Hyperlink layoutX="100.0" layoutY="296.0" text="Forgot Password?" />
-            <Hyperlink layoutX="126.0" layoutY="320.0" onAction="#switchToSignUp" text="Sign Up" />
+            <Hyperlink layoutX="100.0" layoutY="313.0" text="Forgot Password?" />
+            <Hyperlink layoutX="126.0" layoutY="337.0" onAction="#switchToSignUp" text="Sign Up" />
             <Label fx:id="loginWarn" alignment="CENTER" layoutX="26.0" layoutY="213.0" prefHeight="18.0" prefWidth="250.0" textFill="RED" />
-            <Button onMouseClicked="scanQr" layoutX="27.0" layoutY="361.0" mnemonicParsing="false" text="QR" />
+            <Button layoutX="27.0" layoutY="361.0" mnemonicParsing="false" onMouseClicked="#scanQr" prefHeight="26.0" prefWidth="108.0" style="-fx-background-color: #0a2342;" text="Use QR Instead" textFill="#eff9f0" />
+            <CheckBox fx:id="rememberMe" layoutX="26.0" layoutY="295.0" mnemonicParsing="false" text="Remember Me" />
          </children>
       </AnchorPane>
    </right>
